Modify: jyb1798 블로그 수정

--- a/_posts/2022-03-08-sementic-jyb1798.md
+++ b/_posts/2022-03-08-sementic-jyb1798.md
@@ -53,10 +53,8 @@ tags: [front-end, HTML]
 
 ## Semantic Tag 장점❗
 
-- 검색엔진최적화(SEO) : 검색엔진은 태그를 기반으로 페이지 내 검색 키워드의 우선순위를 판단한다. 따라서 시맨틱 태그를 사용한 코드 블록을 찾는 것은 끝없는 div(div > div > div ...)를 탐색하는 것보다 훨씬 쉽다.
+- 검색엔진최적화(SEO) : 검색엔진은 태그를 기반으로 페이지 내 검색 키워드의 우선순위를 판단한다. 단순한 <div> , <span> 으로 둘러싸인 요소들보다 코드를 볼 때 가독성이 좋아지기 때문이다.
 
-- W3C에 따르면 "시맨틱 웹을 사용하면 애플리케이션, 기업 및 커뮤니티에서 데이터를 공유하고 재사용할 수 있다"고 한다. 한 마디로 코드 가독성과 품질이 올라간다는 뜻.
+- 웹 접근성 측면에서, 시각장애가 있는 사용자이 그 의미를 훨씬 잘 파악할 수 있다.
 
-## Semantic Tag 사용 유의사항❗
-
-- 사용할 태그의 의미가 무엇인가? : 사용할 HTML은 태그는 데이터를 기반으로 결정되어야 한다.
+- W3C에 따르면 "시맨틱 웹을 사용하면 애플리케이션, 기업 및 커뮤니티에서 데이터를 공유하고 재사용할 수 있다"고 한다. 한 마디로 코드 가독성과 품질이 올라간다는 뜻이다.
