Modify: jyb1798 블로그 수정

--- a/_posts/2022-03-08-sementic-jyb1798.md
+++ b/_posts/2022-03-08-sementic-jyb1798.md
@@ -53,7 +53,7 @@ tags: [front-end, HTML]
 
 ## Semantic Tag 장점❗
 
-- 검색엔진최적화(SEO) : 검색엔진은 태그를 기반으로 페이지 내 검색 키워드의 우선순위를 판단한다. 단순한 <div> , <span> 으로 둘러싸인 요소들보다 코드를 볼 때 가독성이 좋아지기 때문이다.
+- 검색엔진최적화(SEO) : 검색엔진은 태그를 기반으로 페이지 내 검색 키워드의 우선순위를 판단한다. 단순한 `<div>` , `<span>` 으로 둘러싸인 요소들보다 코드를 볼 때 가독성이 좋아지기 때문이다.
 
 - 웹 접근성 측면에서, 시각장애가 있는 사용자이 그 의미를 훨씬 잘 파악할 수 있다.
 
