--- a/_posts/2022-03-08-sementic-jyb1798.md
+++ b/_posts/2022-03-08-sementic-jyb1798.md
@@ -24,6 +24,8 @@ tags: [front-end, HTML]
 
 ## Semantic Tag 종류와 의미❗
 
+![](/public/hoot.jpg)
+
 ![](https://images.velog.io/images/yeonbee/post/54d8860e-ee41-49f7-b376-f889e1c04139/261BFE435539390B1B.png)
 
 - **HEADER 요소** : HTML5에 새롭게 추가된 요소로서, 웹 문서 맨 윗부분에 있으며 웹 사이트 이름, 글로벌 링크(로그인, 회원가입, 사이트맵, 언어 선택등 웹사이트 어느 곳에서든지 이용할 수 있는 링크)등으로 구성된 영역.
