Add : 이미지 테스트

--- a/_posts/2022-03-08-sementic-jyb1798.md
+++ b/_posts/2022-03-08-sementic-jyb1798.md
@@ -25,6 +25,7 @@ tags: [front-end, HTML]
 ## Semantic Tag 종류와 의미❗
 
 ![](/public/hoot.jpg)
+![](/public/desk.jpg)
 
 ![](https://images.velog.io/images/yeonbee/post/54d8860e-ee41-49f7-b376-f889e1c04139/261BFE435539390B1B.png)
 
